--- a/Sites/MetraView/App_GlobalResources/Dashboard.pt-br.resx
+++ b/Sites/MetraView/App_GlobalResources/Dashboard.pt-br.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TEXT_ACCOUNT_INFORMATION" xml:space="preserve">
-    <value>Informações de conta</value>
+    <value>InformaÃƒÂ§ÃƒÂµes de conta</value>
   </data>
   <data name="TEXT_MY_REPORTS" xml:space="preserve">
-    <value>Meus relatórios</value>
+    <value>Meus relatÃƒÂ³rios</value>
   </data>
   <data name="TEXT_MY_SUBSCRIPTIONS" xml:space="preserve">
     <value>Minhas assinaturas</value>
