--- a/Sites/MetraView/App_GlobalResources/KeyTerms.fr.resx
+++ b/Sites/MetraView/App_GlobalResources/KeyTerms.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,16 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="INDEPENDENT_ACCOUNT" xml:space="preserve">
-    <value>Compte indépendant</value>
+    <value>Compte indÃƒÂ©pendant</value>
   </data>
   <data name="PAYEE_ACCOUNT" xml:space="preserve">
-    <value>Bénéficiaire</value>
+    <value>BÃƒÂ©nÃƒÂ©ficiaire</value>
   </data>
   <data name="PAYER_ACCOUNT" xml:space="preserve">
     <value>Payeur</value>
   </data>
   <data name="String1" xml:space="preserve">
-    <value>Prix personnalisés</value>
+    <value>Prix personnalisÃƒÂ©s</value>
   </data>
   <data name="TEXT_KEYTERM_ACCOUNT_TYPE" xml:space="preserve">
     <value>Type de compte</value>
@@ -136,13 +136,13 @@
     <value>Types de comptes</value>
   </data>
   <data name="TEXT_KEYTERM_CAPABILITIES" xml:space="preserve">
-    <value>Fonctionnalités</value>
+    <value>FonctionnalitÃƒÂ©s</value>
   </data>
   <data name="TEXT_KEYTERM_CAPABILITY" xml:space="preserve">
-    <value>Fonctionnalité</value>
+    <value>FonctionnalitÃƒÂ©</value>
   </data>
   <data name="TEXT_KEYTERM_CORPORATE_ACCOUNT" xml:space="preserve">
-    <value>Compte d’entreprise</value>
+    <value>Compte dÃ¢â‚¬â„¢entreprise</value>
   </data>
   <data name="TEXT_KEYTERM_COUNTER" xml:space="preserve">
     <value>Compteur</value>
@@ -157,31 +157,31 @@
     <value>Remises</value>
   </data>
   <data name="TEXT_KEYTERM_GROUP_SUBSCRIPTION" xml:space="preserve">
-    <value>Abonnement groupé</value>
+    <value>Abonnement groupÃƒÂ©</value>
   </data>
   <data name="TEXT_KEYTERM_GROUP_SUBSCRIPTIONS" xml:space="preserve">
-    <value>Abonnements groupés</value>
+    <value>Abonnements groupÃƒÂ©s</value>
   </data>
   <data name="TEXT_KEYTERM_NON_RECURRING_CHARGE" xml:space="preserve">
-    <value>Frais non récurrents</value>
+    <value>Frais non rÃƒÂ©currents</value>
   </data>
   <data name="TEXT_KEYTERM_NON_RECURRING_CHARGES" xml:space="preserve">
-    <value>Frais non récurrents</value>
+    <value>Frais non rÃƒÂ©currents</value>
   </data>
   <data name="TEXT_KEYTERM_NON_SHARED_PRICE_LIST" xml:space="preserve">
-    <value>Tarif non partagé</value>
+    <value>Tarif non partagÃƒÂ©</value>
   </data>
   <data name="TEXT_KEYTERM_NON_SHARED_PRICE_LISTS" xml:space="preserve">
-    <value>Tarifs non partagés</value>
+    <value>Tarifs non partagÃƒÂ©s</value>
   </data>
   <data name="TEXT_KEYTERM_PARAMETER_TABLE" xml:space="preserve">
-    <value>Tableau des paramètres</value>
+    <value>Tableau des paramÃƒÂ¨tres</value>
   </data>
   <data name="TEXT_KEYTERM_PARAMETER_TABLES" xml:space="preserve">
-    <value>Tableaux des paramètres</value>
+    <value>Tableaux des paramÃƒÂ¨tres</value>
   </data>
   <data name="TEXT_KEYTERM_PERSONAL_RATE" xml:space="preserve">
-    <value>Prix personnalisé</value>
+    <value>Prix personnalisÃƒÂ©</value>
   </data>
   <data name="TEXT_KEYTERM_PRICE_LIST" xml:space="preserve">
     <value>Tarif</value>
@@ -190,10 +190,10 @@
     <value>Tarifs</value>
   </data>
   <data name="TEXT_KEYTERM_PRICEABLE_ITEM" xml:space="preserve">
-    <value>Élément à prix</value>
+    <value>Ãƒâ€°lÃƒÂ©ment ÃƒÂ  prix</value>
   </data>
   <data name="TEXT_KEYTERM_PRICEABLE_ITEMS" xml:space="preserve">
-    <value>Éléments à prix</value>
+    <value>Ãƒâ€°lÃƒÂ©ments ÃƒÂ  prix</value>
   </data>
   <data name="TEXT_KEYTERM_PRODUCT_OFFERING" xml:space="preserve">
     <value>Offre produit</value>
@@ -202,28 +202,28 @@
     <value>Offres produit</value>
   </data>
   <data name="TEXT_KEYTERM_RATE_SCHEDULE" xml:space="preserve">
-    <value>Échelle tarifaire</value>
+    <value>Ãƒâ€°chelle tarifaire</value>
   </data>
   <data name="TEXT_KEYTERM_RATE_SCHEDULES" xml:space="preserve">
-    <value>Échelles tarifaires</value>
+    <value>Ãƒâ€°chelles tarifaires</value>
   </data>
   <data name="TEXT_KEYTERM_REBILL_NAME" xml:space="preserve">
-    <value>Réaffectation</value>
+    <value>RÃƒÂ©affectation</value>
   </data>
   <data name="TEXT_KEYTERM_REBILL_VERB" xml:space="preserve">
-    <value>Réaffecter</value>
+    <value>RÃƒÂ©affecter</value>
   </data>
   <data name="TEXT_KEYTERM_RECURRING_CHARGE" xml:space="preserve">
-    <value>Frais récurrents</value>
+    <value>Frais rÃƒÂ©currents</value>
   </data>
   <data name="TEXT_KEYTERM_RECURRING_CHARGES" xml:space="preserve">
-    <value>Frais récurrents</value>
+    <value>Frais rÃƒÂ©currents</value>
   </data>
   <data name="TEXT_KEYTERM_ROLE" xml:space="preserve">
-    <value>Rôle</value>
+    <value>RÃƒÂ´le</value>
   </data>
   <data name="TEXT_KEYTERM_ROLES" xml:space="preserve">
-    <value>Rôles</value>
+    <value>RÃƒÂ´les</value>
   </data>
   <data name="TEXT_KEYTERM_SERVICE_CHARGE" xml:space="preserve">
     <value>Frais de service</value>
@@ -238,27 +238,27 @@
     <value>Points limites du service</value>
   </data>
   <data name="TEXT_KEYTERM_SHARED_PRICE_LIST" xml:space="preserve">
-    <value>Tarif partagé</value>
+    <value>Tarif partagÃƒÂ©</value>
   </data>
   <data name="TEXT_KEYTERM_SHARED_PRICE_LISTS" xml:space="preserve">
-    <value>Tarifs partagés</value>
+    <value>Tarifs partagÃƒÂ©s</value>
   </data>
   <data name="TEXT_KEYTERM_UNIT_DEPENDENT_RECURRING_CHARGE" xml:space="preserve">
-    <value>Frais récurrents dépendant de l’unité</value>
+    <value>Frais rÃƒÂ©currents dÃƒÂ©pendant de lÃ¢â‚¬â„¢unitÃƒÂ©</value>
   </data>
   <data name="TEXT_KEYTERM_UNIT_DEPENDENT_RECURRING_CHARGES" xml:space="preserve">
-    <value>Frais récurrents dépendant de l’unité</value>
+    <value>Frais rÃƒÂ©currents dÃƒÂ©pendant de lÃ¢â‚¬â„¢unitÃƒÂ©</value>
   </data>
   <data name="TEXT_KEYTERM_USAGE_CHARGE" xml:space="preserve">
-    <value>Frais d’utilisation</value>
+    <value>Frais dÃ¢â‚¬â„¢utilisation</value>
   </data>
   <data name="TEXT_KEYTERM_USAGE_CHARGE_AGGREGATE" xml:space="preserve">
-    <value>Frais d’utilisation (Consolidés)</value>
+    <value>Frais dÃ¢â‚¬â„¢utilisation (ConsolidÃƒÂ©s)</value>
   </data>
   <data name="TEXT_KEYTERM_USAGE_CHARGES" xml:space="preserve">
-    <value>Frais d’utilisation</value>
+    <value>Frais dÃ¢â‚¬â„¢utilisation</value>
   </data>
   <data name="TEXT_KEYTERM_USAGE_CHARGES_AGGREGATE" xml:space="preserve">
-    <value>Frais d’utilisation (Consolidés)</value>
+    <value>Frais dÃ¢â‚¬â„¢utilisation (ConsolidÃƒÂ©s)</value>
   </data>
 </root>
