--- a/Sites/MetraView/App_GlobalResources/TopMenu.fr.resx
+++ b/Sites/MetraView/App_GlobalResources/TopMenu.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -121,6 +121,6 @@
     <value>Aide</value>
   </data>
   <data name="TEXT_LOGOUT" xml:space="preserve">
-    <value>Déconnexion</value>
+    <value>DÃƒÂ©connexion</value>
   </data>
 </root>
