--- a/Sites/MetraView/BE/App_LocalResources/BE.aspx.fr.resx
+++ b/Sites/MetraView/BE/App_LocalResources/BE.aspx.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lblNoBEs.Text" xml:space="preserve">
-    <value>Aucun élément à afficher</value>
+    <value>Aucun ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©lÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©ment ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â  afficher</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Liste des entités de modélisation métier</value>
+    <value>Liste des entitÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©s de modÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©lisation mÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©tier</value>
   </data>
 </root>
