--- a/Sites/MetraView/Payments/App_LocalResources/ACHRemove.aspx.pt-br.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/ACHRemove.aspx.pt-br.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -121,7 +121,7 @@
     <value>Remover ACH</value>
   </data>
   <data name="btnNoResource1.Text" xml:space="preserve">
-    <value>Não</value>
+    <value>NÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o</value>
   </data>
   <data name="btnYesResource1.Text" xml:space="preserve">
     <value>Sim</value>
