--- a/Sites/MetraView/Payments/App_LocalResources/CreditCardRemove.aspx.fr.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/CreditCardRemove.aspx.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -124,18 +124,18 @@
     <value>Oui</value>
   </data>
   <data name="lblConfirmResource1.Text" xml:space="preserve">
-    <value>Êtes-vous sûr de vouloir supprimer la carte de crédit ci-dessous ?</value>
+    <value>ÃƒÆ’Ã†â€™Ãƒâ€¦Ã‚Â tes-vous sÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â»r de vouloir supprimer la carte de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dit ci-dessousÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â ?</value>
   </data>
   <data name="lblErrorMessageResource1.Text" xml:space="preserve">
-    <value>Messages d’erreur</value>
+    <value>Messages dÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬ÃƒÂ¢Ã¢â‚¬Å¾Ã‚Â¢erreur</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Supprimer la carte de crédit</value>
+    <value>Supprimer la carte de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dit</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>Supprimer la carte de crédit</value>
+    <value>Supprimer la carte de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dit</value>
   </data>
   <data name="RemoveCC.Text" xml:space="preserve">
-    <value>Supprimer la carte de crédit</value>
+    <value>Supprimer la carte de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dit</value>
   </data>
 </root>
