--- a/Sites/MetraView/Payments/App_LocalResources/CreditCardUpdate.aspx.fr.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/CreditCardUpdate.aspx.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,37 +118,37 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ddCardTypeResource1.Label" xml:space="preserve">
-    <value>Type de carte de crédit</value>
+    <value>Type de carte de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dit</value>
   </data>
   <data name="ddExpMonthResource1.Label" xml:space="preserve">
-    <value>Date d’expiration</value>
+    <value>Date dÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬ÃƒÂ¢Ã¢â‚¬Å¾Ã‚Â¢expiration</value>
   </data>
   <data name="ddExpYearResource1.Label" xml:space="preserve">
     <value>(s)</value>
   </data>
   <data name="ddPriorityResource1.Label" xml:space="preserve">
-    <value>Priorité</value>
+    <value>PrioritÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©</value>
   </data>
   <data name="lblErrorMessageResource1.Text" xml:space="preserve">
-    <value>Messages d’erreur</value>
+    <value>Messages dÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬ÃƒÂ¢Ã¢â‚¬Å¾Ã‚Â¢erreur</value>
   </data>
   <data name="MTSection1Resource1.Text" xml:space="preserve">
-    <value>Informations sur la carte de crédit</value>
+    <value>Informations sur la carte de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dit</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Mettre à jour la carte de crédit</value>
+    <value>Mettre ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â  jour la carte de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dit</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>Mettre à jour la carte de crédit</value>
+    <value>Mettre ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â  jour la carte de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dit</value>
   </data>
   <data name="tbAddress2Resource1.Label" xml:space="preserve">
-    <value>Ligne d’adresse 2</value>
+    <value>Ligne dÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬ÃƒÂ¢Ã¢â‚¬Å¾Ã‚Â¢adresseÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â 2</value>
   </data>
   <data name="tbAddressResource1.Label" xml:space="preserve">
-    <value>Ligne d’adresse 1</value>
+    <value>Ligne dÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬ÃƒÂ¢Ã¢â‚¬Å¾Ã‚Â¢adresseÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â 1</value>
   </data>
   <data name="tbCCNumberResource1.Label" xml:space="preserve">
-    <value>Numéro de la carte</value>
+    <value>NumÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©ro de la carte</value>
   </data>
   <data name="tbCityResource1.Label" xml:space="preserve">
     <value>Ville</value>
@@ -157,21 +157,21 @@
     <value>Pays</value>
   </data>
   <data name="tbFirstNameResource1.Label" xml:space="preserve">
-    <value>Prénom</value>
+    <value>PrÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©nom</value>
   </data>
   <data name="tbLastNameResource1.Label" xml:space="preserve">
     <value>Nom</value>
   </data>
   <data name="tbMiddleInitialResource1.Label" xml:space="preserve">
-    <value>Initiale du second prénom</value>
+    <value>Initiale du second prÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©nom</value>
   </data>
   <data name="tbStateResource1.Label" xml:space="preserve">
-    <value>Département</value>
+    <value>DÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©partement</value>
   </data>
   <data name="tbZipCodeResource1.Label" xml:space="preserve">
     <value>Code postal</value>
   </data>
   <data name="UpdateCC.Text" xml:space="preserve">
-    <value>Mettre à jour la carte de crédit</value>
+    <value>Mettre ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â  jour la carte de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dit</value>
   </data>
 </root>
