--- a/Sites/MetraView/Payments/App_LocalResources/CreditCardUpdate.aspx.pt-br.resx
+++ b/Sites/MetraView/Payments/App_LocalResources/CreditCardUpdate.aspx.pt-br.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ddCardTypeResource1.Label" xml:space="preserve">
-    <value>Tipo de cartão de crédito</value>
+    <value>Tipo de cartÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dito</value>
   </data>
   <data name="ddExpMonthResource1.Label" xml:space="preserve">
-    <value>Data de expiração</value>
+    <value>Data de expiraÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o</value>
   </data>
   <data name="ddExpYearResource1.Label" xml:space="preserve">
     <value>/</value>
@@ -133,28 +133,28 @@
     <value>Mensagens de erro</value>
   </data>
   <data name="MTSection1Resource1.Text" xml:space="preserve">
-    <value>Informações do cartão de crédito</value>
+    <value>InformaÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Âµes do cartÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dito</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Atualizar cartão de crédito</value>
+    <value>Atualizar cartÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dito</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>Atualizar cartão de crédito</value>
+    <value>Atualizar cartÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dito</value>
   </data>
   <data name="tbAddress2Resource1.Label" xml:space="preserve">
-    <value>Endereço linha 2</value>
+    <value>EndereÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§o linha 2</value>
   </data>
   <data name="tbAddressResource1.Label" xml:space="preserve">
-    <value>Endereço linha 1</value>
+    <value>EndereÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§o linha 1</value>
   </data>
   <data name="tbCCNumberResource1.Label" xml:space="preserve">
-    <value>Número do cartão</value>
+    <value>NÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Âºmero do cartÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o</value>
   </data>
   <data name="tbCityResource1.Label" xml:space="preserve">
     <value>Cidade</value>
   </data>
   <data name="tbCountryResource1.Label" xml:space="preserve">
-    <value>País</value>
+    <value>PaÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â­s</value>
   </data>
   <data name="tbFirstNameResource1.Label" xml:space="preserve">
     <value>Nome</value>
@@ -166,12 +166,12 @@
     <value>Inicial do nome do meio</value>
   </data>
   <data name="tbStateResource1.Label" xml:space="preserve">
-    <value>Estado/Província</value>
+    <value>Estado/ProvÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â­ncia</value>
   </data>
   <data name="tbZipCodeResource1.Label" xml:space="preserve">
     <value>CEP</value>
   </data>
   <data name="UpdateCC.Text" xml:space="preserve">
-    <value>Atualizar cartão de crédito</value>
+    <value>Atualizar cartÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o de crÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©dito</value>
   </data>
 </root>
