--- a/Sites/MetraView/UserControls/App_LocalResources/GreenInvoice.ascx.fr.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/GreenInvoice.ascx.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -121,7 +121,7 @@
     <value>Informations de paiement</value>
   </data>
   <data name="GoingGreen.Text" xml:space="preserve">
-    <value>Vous vous mettez au vert ?</value>
+    <value>Vous vous mettez au vertÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â ?</value>
   </data>
   <data name="LastPayment.Text" xml:space="preserve">
     <value>Dernier paiement</value>
@@ -139,7 +139,7 @@
     <value>facturation sans papier</value>
   </data>
   <data name="PaymentDue.Text" xml:space="preserve">
-    <value>Paiement dû :</value>
+    <value>Paiement dÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â»ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â :</value>
   </data>
   <data name="PayNow.Text" xml:space="preserve">
     <value>Effectuer un paiement</value>
@@ -148,6 +148,6 @@
     <value>Optez pour notre</value>
   </data>
   <data name="TotalAmountDue.Text" xml:space="preserve">
-    <value>Montant total dû :</value>
+    <value>Montant total dÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â»ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â :</value>
   </data>
 </root>
