--- a/Sites/MetraView/UserControls/App_LocalResources/ProductUsageGraph.ascx.fr.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/ProductUsageGraph.ascx.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -124,6 +124,6 @@
     <value>.</value>
   </data>
   <data name="ProductUsageGraphText.Text" xml:space="preserve">
-    <value>Ce tableau représente les frais d'utilisation de l'intervalle de facturation, ventilé par produit. Pour afficher plus d'informations sur ces frais, cliquez </value>
+    <value>Ce tableau reprÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©sente les frais d'utilisation de l'intervalle de facturation, ventilÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â© par produit. Pour afficher plus d'informations sur ces frais, cliquez </value>
   </data>
 </root>
