--- a/Sites/MetraView/UserControls/App_LocalResources/ReportParams.ascx.pt-br.resx
+++ b/Sites/MetraView/UserControls/App_LocalResources/ReportParams.ascx.pt-br.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -121,6 +121,6 @@
     <value>Exibindo resultados para</value>
   </data>
   <data name="Through.Text" xml:space="preserve">
-    <value>até</value>
+    <value>atÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â©</value>
   </data>
 </root>
