--- a/App_GlobalResources/Resource.ja.resx
+++ b/App_GlobalResources/Resource.ja.resx
@@ -645,4 +645,13 @@
   <data name="TEXT_USE_STANDARD_INCLUSIVE_TAX_CALCULATION" xml:space="preserve">
     <value>[JA]Use Standard Inclusive Tax Calculation</value>
   </data>
+  <data name="TEXT_BILL_MESSAGE_ASSOCIATIONS" xml:space="preserve">
+    <value>[JA]Bill Message Associations</value>
+  </data>
+  <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
+    <value>[JA]Bill Messages</value>
+  </data>
+  <data name="TEXT_ADD" xml:space="preserve">
+    <value>[JA]Add</value>
+  </data>
 </root>
