--- a/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessage_de.xml
+++ b/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessage_de.xml
@@ -18,5 +18,9 @@
       <Name>BusinessEntity/Core.BillMessages.BillMessage/MessageType/Label</Name>
       <Value>[DE]Message Type</Value>
     </locale_entry>
-  </locale_space>
+    <locale_entry>
+      <Name>BusinessEntity/Core.BillMessages.BillMessage/Language/Label</Name>
+      <Value>[DE]Language</Value>
+    </locale_entry>
+</locale_space>
 </mt_config>
