--- a/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessage_fr.xml
+++ b/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessage_fr.xml
@@ -18,5 +18,9 @@
       <Name>BusinessEntity/Core.BillMessages.BillMessage/MessageType/Label</Name>
       <Value>Type du message</Value>
     </locale_entry>
+    <locale_entry>
+      <Name>BusinessEntity/Core.BillMessages.BillMessage/Language/Label</Name>
+      <Value>Langue</Value>
+    </locale_entry>
   </locale_space>
 </mt_config>
