--- a/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessage_jp.xml
+++ b/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessage_jp.xml
@@ -18,5 +18,9 @@
       <Name>BusinessEntity/Core.BillMessages.BillMessage/MessageType/Label</Name>
       <Value>[JA]Message Type</Value>
     </locale_entry>
+    <locale_entry>
+      <Name>BusinessEntity/Core.BillMessages.BillMessage/Language/Label</Name>
+      <Value>[JA]Language</Value>
+    </locale_entry>
   </locale_space>
 </mt_config>
